[gd_scene load_steps=6 format=3 uid="uid://qplpqentaj5a"]

[ext_resource type="Script" uid="uid://d2jjk5v2wnbf4" path="res://cubo.gd" id="1_vveh1"]
[ext_resource type="PackedScene" uid="uid://3nn02ldxaqhd" path="res://modelos/black_cat.glb" id="2_xvd08"]
[ext_resource type="PackedScene" uid="uid://c11edi668xulo" path="res://modelos/cat.glb" id="3_smx6m"]
[ext_resource type="PackedScene" uid="uid://c2surcongu2wg" path="res://modelos/shark_cat.glb" id="4_3oy3l"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7dm0k"]
size = Vector3(1.5, 1.5, 1.5)

[node name="Cubo" type="RigidBody3D"]
gravity_scale = 0.3
script = ExtResource("1_vveh1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_7dm0k")

[node name="gatoPreto1" parent="." instance=ExtResource("2_xvd08")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.10115, -0.545652, 0)
visible = false

[node name="gatoPreto2" parent="." instance=ExtResource("3_smx6m")]
transform = Transform3D(0.16937, 0, -4.49681, 0, 4.5, 0, 4.49681, 0, 0.16937, 0, -0.687702, 0)
visible = false

[node name="gatoPreto3" parent="." instance=ExtResource("4_3oy3l")]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, -0.647776, 0)
visible = false
